--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type":"module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "seed": "node seeder.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
+    "seed": "node ./src/seeder.js"
   },
   
   "keywords": [],
